--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ canonical: https://kgyeongmi21.github.io
 
 	<div data-anchor="3section" class="section" id="section3" onclick="location.href='https://kgyeongmi21.github.io/profile';">
 		<a href="https://kgyeongmi21.github.io/profile">my profile page</a>
-		<h1 class="heavy">Take a trip to my profile page</h1>
+		<h1 class="heavy">Take a trip to my profile page by clicking anywhere on the page.</h1>
 		<div class="intro-scroll-down">
 			<a data-menuanchor="4section" href="#4section">
 				<span class="mouse">
